# jurand

./: CMakeLists.txt  Cargo.toml  Makefile  NOTICE  README.adoc  README.md  build.sh  build_manpages.sh  cog.lua  compile_flags.txt  install.sh  rules.mk  test.sh
.github/workflows/: ci.yaml
macros/: macros.fjurand  macros.jurand
manpages/: java_remove.7.adoc  java_remove_annotations.7.adoc  java_remove_annotations.adoc  java_remove_annotations.txt  java_remove_imports.7.adoc  java_remove_imports.adoc  java_remove_imports.txt  jurand.1.adoc
src/: io_thread.hpp  java_remove_symbols.cpp  java_remove_symbols_test.cpp  java_symbols.hpp  java_symbols.rs  java_symbols_test.rs  jurand.cpp  jurand_test.cpp  lib.rs  main.rs  regex.cpp  regex.hpp
test_resources/: Array.1.java  Array.2.java  Array.3.java  Array.4.java  Array.5.java  Array.java  Attributes.1.java  Attributes.java  Collision.1.java  Collision.2.java  Collision.java  Fqn.1.java  Fqn.java  Fqn_collision.1.java  Fqn_collision.2.java  Fqn_collision.java  Garbage.1.java  Garbage.java  Imports.0.java  Imports.1.java  Imports.2.java  Package_info.1.java  Package_info.java  Pattern.1.java  Pattern.java  Regression5.1.java  Regression5.java  Simple.1.java  Simple.java  Static_import.1.java  Static_import.2.java  Static_import.java  Static_import_collision.1.java  Static_import_collision.java  Strict.1.java  Strict.2.java  Termination.1.java  Termination.2.java  Termination.3.java  Termination.4.java  (+16 more)
test_resources/directory/: A.java
test_resources/module_termination_1/: module-info.java
tests/: java_symbols.rs
(+15 files in other folders)
