[package]
name = "jurand"
version = "0.1.0"
edition = "2021"
authors = ["Marián Konček <mkoncek@redhat.com>"]
repository = "https://github.com/fedora-java/jurand"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
walkdir = "2"
os_str_bytes = "6.5.0"
once_cell = "1.17.1"
